# mosaika

./: .rustfmt.toml  .taplo.toml  Cargo.toml  DESIGN.md  mosaika.schema.json
examples/find/find-anchors/proj/: mosaika.toml
examples/find/find-anchors/solu/: anchors.jsonl
examples/find/find-code-blocks/proj/: mosaika.toml
examples/find/find-code-blocks/solu/: audit.jsonl
examples/find/find-release-windows/proj/: mosaika.toml
examples/find/find-release-windows/solu/: release-window.jsonl
examples/mixture/mixture-large/prod/: README.md  stamp.txt  todo-log.jsonl
examples/mixture/mixture-large/proj/: README.md  mosaika.toml
examples/mixture/mixture-large/solu/: todo-log.jsonl
examples/mixture/mixture-small/prod/: README.md  todos.jsonl
examples/mixture/mixture-small/proj/: mosaika.toml
examples/mixture/mixture-small/solu/: todos.jsonl
examples/mixture/multiple-delimiters/prod/: notes.txt
examples/mixture/multiple-delimiters/proj/: mosaika.toml  notes.txt
examples/prod/: Cargo.toml
examples/prod/src/: main.rs
examples/proj/: build.rs  mosaika.toml
examples/proj/src/: main.rs
examples/replace/docs-publish/proj/: mosaika.toml
examples/replace/license-header/proj/: mosaika.toml
examples/replace/rust-build/proj/: mosaika.toml
pet/shizuka/final/: validation.json
pet/shizuka/package/: pet.json
pet/shizuka/provenance/: imagegen-jobs.json  pet_request.json
pet/shizuka/qa/: review.json  run-summary.json
pet/tools/: extract_consistent_frames.py
src/: engine.rs  lib.rs  main.rs  semantics.rs  syntax.rs
tests/: examples.rs
(+42 files in other folders)
