[package]
name = "mosaika"
version = "0.1.0"
edition = "2024"

[features]
default = []
json-schema = ["schemars"]

[dependencies]
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", optional = true }
toml = "0.9"
glob = "0.3"

# a binary that generates the json schema if the json-schema feature is enabled
[[bin]]
name = "schema"
required-features = ["json-schema"]
