[package]
name = "mosaika"
version = "0.1.0"
edition = "2024"
default-run = "mosaika"

[features]
default = []
json-schema = ["schemars"]

[dependencies]
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", optional = true }
toml = "1.1"
glob = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# a binary that generates the json schema if the json-schema feature is enabled
[[bin]]
name = "schema"
required-features = ["json-schema"]
